--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.body__fix {
+  overflow-y: hidden;
+}
+
+body {
+  overflow-x: hidden;
+}
