--- a/styles/article.css
+++ b/styles/article.css
@@ -14,6 +14,7 @@
 
 .article strong {
   font-weight: 900;
+  color: #fff;
 }
 
 .article h2 {
@@ -94,18 +95,22 @@
 .article ul li {
   position: relative;
   font-size: 18px;
-  line-height: 28px;
-  color: #fff;
-  margin-bottom: 3px;
+  line-height: 25px;
+  color: #eee;
+  margin-bottom: 5px;
+  padding-left: 5px;
+  padding-bottom: 5px;
+  border-left: 1px solid #e86d3366;
+  border-bottom-left-radius: 10px;
 }
 
 .article ul li:before {
   content: "";
   position: absolute;
-  left: -10px;
-  top: 12px;
-  width: 5px;
-  height: 5px;
+  left: -14px;
+  top: 11px;
+  width: 6px;
+  height: 6px;
   border-radius: 50%;
   background-color: #e86d33;
 }
@@ -117,18 +122,22 @@
 .article ol li {
   position: relative;
   font-size: 18px;
-  line-height: 28px;
-  color: #fff;
-  margin-bottom: 3px;
+  line-height: 25px;
+  color: #eee;
+  margin-bottom: 5px;
+  padding-left: 5px;
+  padding-bottom: 5px;
+  border-left: 1px solid #e86d3366;
+  margin-bottom: 5px;
 }
 
 .article ol li:before {
   content: "";
   position: absolute;
-  left: -10px;
-  top: 12px;
-  width: 5px;
-  height: 5px;
+  left: -14px;
+  top: 11px;
+  width: 6px;
+  height: 6px;
   border-radius: 50%;
   background-color: #e86d33;
 }
