--- a/styles/articleCard.css
+++ b/styles/articleCard.css
@@ -1,9 +1,6 @@
 .articleCard p {
-  color: #fff;
-  font-size: 18px;
   margin-bottom: 30px;
-  color: rgb(156 163 175);
-  font-size: 14px;
+  color: #9ca3af;
 }
 
 .articleCard a {
@@ -14,6 +11,7 @@
 
 .articleCard strong {
   font-weight: 900;
+  color: #fff;
 }
 
 .articleCard code {
