--- a/styles/article.css
+++ b/styles/article.css
@@ -77,7 +77,8 @@
 .article pre code {
   background-color: #110f18;
   color: #979daa;
-  padding: 1rem;
+  padding: 1rem !important;
+  border: 1px solid #fff5;
   margin-bottom: 20px;
 }
 
@@ -153,7 +154,7 @@
   content: "";
   position: absolute;
   right: 10px;
-  top: -18px;
+  top: -14px;
   width: 30px;
   height: 30px;
   background-size: contain;
