--- a/styles/article.css
+++ b/styles/article.css
@@ -1,12 +1,12 @@
-.article p {
+#article p {
   color: #ccc;
   font-size: 18px;
   line-height: 28px;
-  margin-bottom: 30px;
+  padding-bottom: 30px;
   font-weight: 300 !important;
 }
 
-.article a {
+#article a {
   border-bottom: 1px solid #4285f4;
   font-size: 20px;
   font-weight: 700;
@@ -14,39 +14,40 @@
   font-family: Inter;
 }
 
-.article a:hover {
+#article a:hover {
   color: #62a5f4;
   border-bottom: 1px solid #62a5f4;
 }
 
-.article a::before {
+#article a::before {
   content: "📌";
 }
 
-.article img {
+#article img {
   padding: 12px;
   border-radius: 30px;
   background-color: #29292977;
 }
 
-.article strong {
+#article strong {
   font-weight: 900;
   font-size: 19px;
   color: #fff;
   font-family: Inter;
 }
 
-.article h2 {
+#article h2 {
   position: relative;
   font-size: 30px;
   font-weight: 600;
   color: #fff;
-  margin: 60px 0 20px 0;
+  padding-top: 60px;
+  margin-bottom: 20px;
   padding-bottom: 10px;
   border-bottom: 5px solid #fff;
 }
 
-.article h2:before {
+#article h2:before {
   content: "";
   position: absolute;
   bottom: -12px;
@@ -59,20 +60,21 @@
   border-top: 10px solid #0000;
 }
 
-.article h3 {
+#article h3 {
   position: relative;
   font-size: 22px;
   font-weight: 500;
   color: #fff;
-  margin: 40px 0 20px 0;
+  margin-top: 40px;
   padding-left: 20px;
   padding-bottom: 10px;
+  margin-bottom: 20px;
   border-left: 2px double #7c53bd;
   border-bottom: 4px double #7c53bd;
   border-bottom-left-radius: 15px;
 }
 
-.article code {
+#article code {
   background-color: #fff;
   color: #111;
   padding: 0 4px;
@@ -80,35 +82,35 @@
   font-size: 16px;
 }
 
-.article pre code {
+#article pre code {
   background-color: #110f18;
   color: #979daa;
   padding: 1rem !important;
   border: 1px solid #fff5;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
-.article p + ul {
+#article p + ul {
   margin-top: -16px;
 }
 
-.article ul {
+#article ul {
   padding: 0 0 16px 16px;
 }
 
-.article ul li {
+#article ul li {
   position: relative;
   font-size: 18px;
   line-height: 25px;
   color: #ccc;
-  margin-bottom: 15px;
   padding-left: 8px;
+  margin-bottom: 10px;
   padding-bottom: 8px;
   border-left: 3px solid #7c53bd;
   border-bottom-left-radius: 15px;
 }
 
-.article ul li:before {
+#article ul li:before {
   content: "";
   position: absolute;
   left: -14px;
@@ -119,23 +121,23 @@
   background-color: #7c53bd;
 }
 
-.article ol {
+#article ol {
   padding: 0 0 16px 16px;
 }
 
-.article ol li {
+#article ol li {
   position: relative;
   font-size: 18px;
   line-height: 25px;
   color: #ccc;
-  margin-bottom: 5px;
+  padding-bottom: 5px;
   padding-left: 5px;
   padding-bottom: 5px;
   border-left: 1px solid #7c53bd;
-  margin-bottom: 5px;
+  padding-bottom: 5px;
 }
 
-.article ol li:before {
+#article ol li:before {
   content: "";
   position: absolute;
   left: -14px;
@@ -146,17 +148,17 @@
   background-color: #7c53bd;
 }
 
-.article li strong:first-of-type {
+#article li strong:first-of-type {
   text-decoration: underline;
   color: #7c53bd;
   font-weight: 700;
 }
 
-.article pre {
+#article pre {
   position: relative;
 }
 
-.article pre code:before {
+#article pre code:before {
   content: "";
   position: absolute;
   right: 10px;
