--- a/styles/article.css
+++ b/styles/article.css
@@ -6,6 +6,14 @@
   font-weight: 300 !important;
 }
 
+.p__tag-previous-h2 {
+  padding: 0 !important;
+}
+
+.p__tag-next-pre {
+  padding-top: 10px;
+}
+
 #article a {
   border-bottom: 1px solid #4285f4;
   font-size: 20px;
