--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -1,5 +1,5 @@
 #article p {
-  color: #fff;
+  color: #000;
   font-family: Inter;
   font-size: 20px;
   line-height: 36px;
@@ -21,9 +21,9 @@
 }
 
 #article strong {
-  font-weight: 900;
+  font-weight: 700;
   font-size: 20px;
-  color: #fff;
+  color: #000;
   font-family: Inter;
 }
 
@@ -32,8 +32,8 @@
   position: relative;
   font-size: 30px;
   font-weight: 600;
-  color: #fff;
-  border-bottom: 5px solid #fff;
+  color: #000;
+  border-bottom: 5px solid #000;
   margin-bottom: 20px;
   margin-top: 30px;
   padding-bottom: 10px;
@@ -58,7 +58,7 @@
   position: relative;
   font-size: 24px;
   font-weight: 500;
-  color: #fff;
+  color: #000;
   border-bottom: 4px solid #9f53fd;
   margin-bottom: 20px;
   margin-top: 10px;
@@ -69,21 +69,21 @@
 
 #article blockquote {
   border-left: 20px solid #7c53bd;
-  background-color: #7c53bd0a;
+  background-color: #ccca;
   padding: 10px 0 !important;
   margin-bottom: 5px;
 }
 
 #article blockquote p {
   font-size: 18px;
-  color: #ccc;
+  color: #000;
   padding: 0;
   margin-left: 15px;
   line-height: 28px;
 }
 
 #article code {
-  background-color: #141f27;
+  background-color: #fff;
   color: #9f53fd;
   padding: 2px 4px;
   border-radius: 6px;
@@ -107,6 +107,7 @@
 
 #article p em {
   font-weight: 600;
+  color: #444;
 }
 
 #article ul {
@@ -115,7 +116,7 @@
 
 #article ul li {
   border-left: 3px solid #7c53bd;
-  color: #eee;
+  color: #333;
   font-family: Inter;
   font-size: 18px;
   line-height: 30px;
@@ -147,7 +148,7 @@
 
 #article ol li {
   border-left: 3px solid #7c53bd;
-  color: #eee;
+  color: #333;
   font-family: Inter;
   font-size: 20px;
   line-height: 33px;
@@ -175,8 +176,8 @@
 
 #article li strong:first-of-type {
   text-decoration: underline;
-  color: #fff;
-  font-weight: 900;
+  color: #000;
+  font-weight: 700;
   text-underline-offset: 4px;
 }
 
@@ -186,6 +187,201 @@
 }
 
 #article pre code:before {
+  content: "";
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  width: 30px;
+  height: 30px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+/* DARK */
+/* DARK */
+/* DARK */
+/* DARK */
+
+#article__dark p {
+  color: #fff;
+  font-family: Inter;
+  font-size: 20px;
+  line-height: 36px;
+  padding-bottom: 30px;
+  font-weight: 300 !important;
+}
+
+#article__dark img {
+  padding: 5px;
+  background-color: #9f53fd;
+}
+
+#article__dark strong {
+  font-weight: 700;
+  font-size: 20px;
+  color: #fff;
+  font-family: Inter;
+}
+
+#article__dark h2 {
+  font-family: merriweather;
+  position: relative;
+  font-size: 30px;
+  font-weight: 600;
+  color: #fff;
+  border-bottom: 5px solid #fff;
+  margin-bottom: 20px;
+  margin-top: 30px;
+  padding-bottom: 10px;
+  padding-top: 8px;
+}
+
+#article__dark h2:before {
+  content: "";
+  position: absolute;
+  bottom: -12px;
+  left: 0;
+  width: 10px;
+  height: 20px;
+  border-bottom: 10px solid #0000;
+  border-right: 10px solid #0000;
+  border-left: 10px solid #9f53fd;
+  border-top: 10px solid #0000;
+}
+
+#article__dark h3 {
+  font-family: merriweather;
+  position: relative;
+  font-size: 24px;
+  font-weight: 500;
+  color: #fff;
+  border-bottom: 4px solid #9f53fd;
+  margin-bottom: 20px;
+  margin-top: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-top: 8px;
+}
+
+#article__dark blockquote {
+  border-left: 20px solid #7c53bd;
+  background-color: #7c53bd0a;
+  padding: 10px 0 !important;
+  margin-bottom: 5px;
+}
+
+#article__dark blockquote p {
+  font-size: 18px;
+  color: #ccc;
+  padding: 0;
+  margin-left: 15px;
+  line-height: 28px;
+}
+
+#article__dark code {
+  background-color: #141f27;
+  color: #9f53fd;
+  padding: 2px 4px;
+  border-radius: 6px;
+  font-weight: 700;
+  font-size: 20px;
+}
+
+#article__dark pre code {
+  background-color: #110f18;
+  font-size: 18px;
+  color: #979daa;
+  padding: 1rem !important;
+  border: 1px solid #fff5;
+  margin-bottom: 10px;
+  font-weight: 300;
+}
+
+#article__dark p + ul {
+  margin-top: -10px;
+}
+
+#article__dark p em {
+  font-weight: 600;
+}
+
+#article__dark ul {
+  padding: 0 0 16px 35px;
+}
+
+#article__dark ul li {
+  border-left: 3px solid #7c53bd;
+  color: #eee;
+  font-family: Inter;
+  font-size: 18px;
+  line-height: 30px;
+  margin-bottom: 10px;
+  padding-left: 8px;
+  position: relative;
+  font-weight: 300;
+}
+
+#article__dark ul li:before {
+  content: "";
+  position: absolute;
+  left: -14px;
+  top: 11px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #7c53bd;
+}
+
+#article__dark ul li p {
+  padding-bottom: 0;
+  margin: 0;
+}
+
+#article__dark ol {
+  padding: 0 0 16px 35px;
+}
+
+#article__dark ol li {
+  border-left: 3px solid #7c53bd;
+  color: #eee;
+  font-family: Inter;
+  font-size: 20px;
+  line-height: 33px;
+  margin-bottom: 10px;
+  padding-bottom: 8px;
+  padding-left: 8px;
+  position: relative;
+}
+
+#article__dark ol li:before {
+  content: "";
+  position: absolute;
+  left: -14px;
+  top: 11px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #7c53bd;
+}
+
+#article__dark ol li p {
+  padding-bottom: 0;
+  margin: 0;
+}
+
+#article__dark li strong:first-of-type {
+  text-decoration: underline;
+  color: #fff;
+  font-weight: 700;
+  text-underline-offset: 4px;
+}
+
+#article__dark pre {
+  position: relative;
+  margin-bottom: 30px;
+}
+
+#article__dark pre code:before {
   content: "";
   position: absolute;
   right: 10px;
